# keyring

./: CONTRIBUTING.md  README.md  SKILL.md  install.sh  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: publish.yml  release.yml
d1-secret-vault/: SKILL.md
d1-secret-vault/scripts/: secretvault.py
keyring/: __init__.py  __main__.py  alias.py  cli.py  crypto.py  import_env.py  store.py  validator.py  wizard.py
tests/: test_alias.py  test_crypto.py  test_import_env.py  test_store.py
