[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "keyring-cli"
version = "1.0.0"
description = "本地加密密钥/密码管理 — AES-256-GCM 加密，AI 能注入但看不到明文"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "webkubor"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0",
]

[project.scripts]
keyring = "keyring.cli:main"

[tool.setuptools.packages.find]
include = ["keyring*"]
