[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "keyring-cli"
version = "1.1.0"
description = "轻量级加密密钥管理 — 支持多账户多密钥，AI 安全注入"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "webkubor"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0",
]

[project.scripts]
keyring = "keyring.cli:main"

[tool.setuptools.packages.find]
include = ["keyring*"]
